# Artificial-Vision-Course

./: .gitignore  340403.cpp  CMakeLists.txt  Functions.cpp  Functions.h  README.md
Canny/: simple.cpp
Exam/: 340403.cpp  CMakeLists.txt
L01-bayer/: simple.cpp
L01a/: convolution.cpp
L02-candela/: CMakeLists.txt  simple.cpp
L03_morfologia_matematica/: morpho.cpp
L04-pinhole/: main.cpp  utils.h
L04a-edges/: CMakeLists.txt  a1.cpp
L05-inverse/: main.cpp
SIFT/: simple.cpp
hough/: CMakeLists.txt  hough.cpp
omografia_ransac_svd/: main.cpp
omografia_sharpen/: main.cpp
point cloud_ plane_fitting_sad/ass2_SAD_RANSAC/: CMakeLists.txt  main.cpp
point cloud_ plane_fitting_sad/images/: right.pgm
point cloud_ plane_fitting_sad/point_cloud_plane_fitting_ransac/: simple.cpp
